--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:inputType="phone" />
+        android:inputType="number" />
 
     <TextView
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
         android:id="@+id/m"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="phone" />
+        android:inputType="number" />
 
     <Button
         android:id="@+id/bt2"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textSize="100dp"
+        android:textSize="50dp"
         android:id="@+id/Result1"/>
 
     <TextView
