--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,19 +18,18 @@
         android:layout_height="wrap_content"
         android:hint="@string/h1"
         android:inputType="numberDecimal" />
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
         android:layout_marginTop="0dp"
         android:text="@string/ed2" />
 
     <EditText
-        android:id="@+id/time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/h2"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:id="@+id/time"/>
 
     <Button
         android:id="@+id/bt1"
@@ -53,18 +52,17 @@
         android:layout_height="wrap_content"
         android:hint="@string/h1"
         android:inputType="numberDecimal" />
-
-    <TextView
+<TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:text="@string/ed4" />
 
     <EditText
-        android:id="@+id/perv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/h1"
-        android:inputType="number" />
+        android:inputType="number"
+        android:id="@+id/perv"/>
 
     <Button
         android:id="@+id/button"
